--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.3.1"
   },
